fixed to large page on small table
Took 7 minutes

--- a/src/app/mode/mode/mode.component.scss
+++ b/src/app/mode/mode/mode.component.scss
@@ -18,7 +18,6 @@ hero-parallax-container {
 
 main {
   margin-top: 0;
-  min-height: 100rem;
   padding-bottom: 9rem;
 
   .container {
